--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pillow = "*"
 django-allauth = "*"
 django-debug-toolbar = "*"
 django-crispy-forms = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
